--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>io.github.sdegroot</groupId>
+    <groupId>com.github.sdegroot</groupId>
     <artifactId>logback-context-logbuffer</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
