Improved unit tests for the Wrappers. But at the same time, excluded the wrappers from the coverage reports. The reason behind this is because the wrappers don't really contain any logic but even more importantly, they can not be tested properly/easily

--- a/pom.xml
+++ b/pom.xml
@@ -185,6 +185,13 @@
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.7.6.201602180812</version>
+                <configuration>
+                    <excludes>
+                        <!-- exlude the appenders as they can not be properly tested anyway -->
+                        <!-- also, these wrappers don't do anything, really. -->
+                        <exclude>**/*Wrapped*Appender.class</exclude>
+                    </excludes>
+                </configuration>
                 <executions>
                     <execution>
                         <id>prepare-agent</id>
